search bars are aligned

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,5 +3,13 @@ form.login {
   margin-top: 50px;
 }
 
+#searchBtn{
+  width: 24%;
+  margin-left: 10px;
+}
 
+#searchBar{
+  width: 24%;
+  margin-left: 10px;
+}
 
