--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,7 @@ form.login {
 #searchBtn{
   width: 24%;
   margin-left: 10px;
+  height: 20px;
 }
 
 #searchBar{
@@ -13,3 +14,8 @@ form.login {
   margin-left: 10px;
 }
 
+#categoryCol{
+  margin-top: 15%;
+  
+
+}
