--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,22 @@ form.login {
 }
 
 #categoryCol{
-  margin-top: 15%;
-  
-
+  margin-top: 6%;
+  padding: 20%;
 }
+
+.card-body{
+  margin-bottom: 10%;
+}
+
+#currentMem{
+  padding: 40px;
+  /* margin-bottom: 100% */
+}
+
+.card{
+  margin-bottom: 80%;
+}
+/* .navBar{
+  align-content: center;
+} */
