--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,3 +38,9 @@ form.login {
  p{
     font-size: 20px;
  }
+
+ body{
+   background-image: url("smartphone-720684_1920.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;
+ }
