--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,7 +41,7 @@ form.login {
  }
 
  body{
-   /* background-image: url("smartphone-720684_1920.jpg"); */
+   background-image: url("smartphone-720684_1920.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-color: cadetblue;
