able to display user info to Profile block. Also changed text color for it for better visual. Signup and login button color as well

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -42,10 +42,10 @@
                     <div class="card-body">
                         <h3 class="card-title">Profile</h3>
                         <br>
-                        <p class="card-text" id="nameUser">Name</p>
-                        <p class="card-text" id="emailUser">Email:</p>
-                        <p class="card-text" id="bioUser">Bio:</p>
-                        <p class="card-text" id="idUser">id:</p>
+                        <p class="card-text text-dark" id="nameUser">Name:</p>
+                        <p class="card-text text-dark" id="emailUser">Email:</p>
+                        <p class="card-text text-dark" id="bioUser">Bio:</p>
+                        <p class="card-text text-dark" id="idUser">id:</p>
                     </div>
                 </div>
             </div>
@@ -74,3 +74,5 @@
         </div>
     </div>
 </div>
+
+    <script type="text/javascript" src="js/members.js"></script>
