--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -43,7 +43,7 @@
                         <span class="sr-only">Error:</span> <span class="msg"></span>
                     </div>
 
-                    <button type="submit" class="btn btn-default">Sign Up</button>
+                    <button type="submit" class="btn btn-default bg-primary">Sign Up</button>
                 </form>
                 <br />
                 <p>Or log in <a href="/login">here</a></p>
