--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,12 +1,4 @@
 <main class="accessbody">
-
-
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-            </div>
-        </div>
-    </nav>
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
@@ -48,7 +40,7 @@
                         <span class="sr-only">Error:</span> <span class="msg"></span>
                     </div>
 
-                    <button type="submit" class="btn btn-default bg-primary">Sign Up</button>
+                    <button type="submit" class="btn btn-default bg-primary text-white">Sign Up</button>
                 </form>
                 <br />
                 <p>Or log in <a href="/login">here</a></p>
