--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,12 @@ form.login {
   margin-top: 50px;
 }
 
+body {
+  background-image: url("smartphone-720684_1920.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+
 #searchBtn{
   width: 24%;
   margin-left: 10px;
@@ -25,6 +31,7 @@ form.login {
 
 #categoryBlock {
   min-width:fit-content;
+  margin-top: 6%;
 }
 
 #currentMem{
@@ -32,8 +39,15 @@ form.login {
   /* margin-bottom: 100% */
 }
 
+/* .card-body {
+  box-shadow: 10px 0px 13px black;
+} */
+
 .card{
   margin-bottom: 80%;
+  margin-top: 15%;
+  box-shadow: 7px 10px 20px black;
+  height: 292px;
 }
 /* .navBar{
   align-content: center;
@@ -46,23 +60,21 @@ form.login {
  }
 
 .accessbody{
-  background-image: url("smartphone-720684_1920.jpg");
-   background-repeat: no-repeat;
-   background-size: cover;
+  margin-top: 50px;
    
  }
 
 #memberspage{
-  background-image: url("headerpic.jpg");
-  background-size:100% 100%;
-  margin: 10px;
+  background-image: url(headerpic.jpg);
+  background-size: 100% 100%;
+  /* margin: -30px 10px; */
   background-repeat: no-repeat;
-  
 }
 
 #headermember{
   background-image: url("wood.jpg");
   background-size: cover;
+  box-shadow: 10px 0px 13px black;
 }
 
 label {
@@ -72,16 +84,44 @@ label {
 .categoryButton{
   background-color: white;
 }
- 
 
+.user-display {
+font-size: 15px;
+font-style: none;
+}
 
  /* Scroll bar for category list in case it is overflowing, need to create a card to hold categories for boundaries */
  
- /* #categoryList {
+ #categoryList {
   overflow-y: scroll;
-  height: 1000%;
-} */
-#info{
+  height: 188px;
+  width: 160px;
+}
+
+#neighborhoodSection, #profileSection {
+  overflow-y: scroll;
+}
+
+.accessbody{
   font-size: 20px;
   
+}
+
+#instruction {
+  margin-top: -200px;
+  font-size: 34px;
+  /* -webkit-text-stroke: .4px rgb(1, 57, 3); */
+  text-shadow: rgb(0 8 0) 2px 0px 6px;
+}
+
+#slogan {
+  font-size: 25px;
+  margin-left: 80px;
+  text-shadow: rgb(0 8 0) 0px 0px 1px;
+  -webkit-text-stroke: .5px rgb(1, 57, 3);
+}
+
+#headerTitle {
+  text-shadow: rgb(0 8 0) 0px 0px 2px;
+  /* -webkit-text-stroke: .5px rgb(1, 57, 3); */
 }
