--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,24 +1,18 @@
 <main class="accessbody">
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-            </div>
-        </div>
-    </nav>
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h2>Welcome to Neighborhood</h2>
+                <h1 class="text-white">Welcome to Neighborhood</h1>
                 <form class="login">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
+                        <label class="accesslabel text-white" for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="email-input" placeholder="Email">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
+                        <label class="accesslabel text-white" for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="password-input" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-default bg-primary">Login</button>
+                    <button type="submit" class="btn btn-default bg-primary text-white">Login</button>
                 </form>
                 <br />
                 <p>Or sign up <a href="/">here</a></p>
