--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -2,9 +2,9 @@
 <div class="jumbotron jumbotron-fluid" id="headermember">
     <div class="container">
         <header>
-            <a class="navbar-brand" href="/logout">
-                Logout
-            </a>
+            <div id="logoutBox">
+                <a id="logout" href="/logout">LOGOUT</a>
+            </div>
             <h1 class="display-4 text-center text-dark" id="headerTitle">The Neighborhood</h1>
             <h2 class="lead text-center text-success" id="slogan">A life with others is a life worthwhile </h2>
         </header>
