--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -18,13 +18,16 @@
                     <input type="input" class="form-control" id="categoryInput" placeholder="New Category">
                     <button type="submit" class="btn btn-primary btn-lg btn-block" id="addCategory">Add Category</button>
                     <br>
-                    <div id="categoryList" class="card btn-group-vertical"></div>   
+                    <div class="card" id="categoryCard" > 
+                        <h2 class="card-title text-center text-white" id="listHeader">Category List</h2>
+                        <div id="categoryList" class="card-body btn-group-vertical"></div>
+                    </div>   
                 </div>
             </div>
             <div class="col-sm">
                 <div class="card-deck">
-                    <div class="card">
-                        <h1 class="card-title text-center">Profile</h1>
+                    <div class="card" id="profileCard">
+                        <h1 class="card-title text-center text-white">Profile</h1>
                         <br>
                         <div class="card-body" id="profileSection">
                             {{!-- <h1 class="card-title text-center">Profile</h1>
@@ -32,15 +35,15 @@
                             <p class="card-text text-dark" id="nameUser">Name:</p>
                             <p class="card-text text-dark" id="emailUser">Email:</p>
                             <p class="card-text text-dark" id="bioUser">Bio:</p>
-                            <p class="card-text text-dark" id="idUser">id:</p>
+                            <p class="card-text text-white" id="idUser"></p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm">
                 <div class="card-deck">
-                    <div class="card">
-                        <h1 class="card-title text-center">My Neighborhood</h1>
+                    <div class="card" id="neighborhoodCard">
+                        <h1 class="card-title text-center text-white">My Neighborhood</h1>
                         {{!-- <div> Select a category to connect with others who share the same interest!</div> --}}
                         <div class="card-body" id="neighborhoodSection">
                             <br>
